--- a/physics textbook.html
+++ b/physics textbook.html
@@ -8,32 +8,32 @@
 <link rel="icon" href="E:\study\fox.png" type="image/png" sizes="16x16 62x62">
 </head>
 <body>
-
+    <nav class="sidebar" id="sidebar">
+        <!-- ...existing sidebar code... -->
+    </nav>
     <header>
-        <div>
-            <img src="fox.png" alt="Logo">
-        </div>
-        <p>Welcome to the new way of studying</p>
+        <button class="theme-toggle" id="themeToggle" title="Toggle dark mode">🌙</button>
+        <h1 style="margin-top: 24px;">Physics Textbook</h1>
     </header>
-
-    <main class="grid">
-        <a class="chapter-button" href="E:\study\phyics\leph101.pdf" target="_blank">📖 Chapter 1</a>
-        <a class="chapter-button" href="E:\study\phyics\leph102.pdf" target="_blank">📖 Chapter 2</a>
-        <a class="chapter-button" href="E:\study\phyics\leph103.pdf" target="_blank">📖 Chapter 3</a>
-        <a class="chapter-button" href="E:\study\phyics\leph104.pdf" target="_blank">📖 Chapter 4</a>
-        <a class="chapter-button" href="E:\study\phyics\leph105.pdf" target="_blank">📖 Chapter 5</a>
-        <a class="chapter-button" href="E:\study\phyics\leph106.pdf" target="_blank">📖 Chapter 6</a>
-        <a class="chapter-button" href="E:\study\phyics\leph107.pdf" target="_blank">📖 Chapter 7</a>
-        <a class="chapter-button" href="E:\study\phyics\leph108.pdf" target="_blank">📖 Chapter 8</a>
-        <a class="chapter-button" href="E:\study\phyics\leph109.pdf" target="_blank">📖 Chapter 9</a>
-        <a class="chapter-button" href="E:\study\phyics\leph1010.pdf" target="_blank">📖 Chapter 10</a>
-        <a class="chapter-button" href="E:\study\phyics\leph1011.pdf" target="_blank">📖 Chapter 11</a>
-        <a class="chapter-button" href="E:\study\phyics\leph1012.pdf" target="_blank">📖 Chapter 12</a>
-        <a class="chapter-button" href="E:\study\phyics\leph1013.pdf" target="_blank">📖 Chapter 13</a>
-        <a class="chapter-button" href="E:\study\phyics\leph1014.pdf" target="_blank">📖 Chapter 14</a>
+    <main>
+        <div class="chapter-grid">
+            <a class="chapter-button" href="E:\study\phyics\leph101.pdf" target="_blank">📖 Chapter 1</a>
+            <a class="chapter-button" href="E:\study\phyics\leph102.pdf" target="_blank">📖 Chapter 2</a>
+            <a class="chapter-button" href="E:\study\phyics\leph103.pdf" target="_blank">📖 Chapter 3</a>
+            <a class="chapter-button" href="E:\study\phyics\leph104.pdf" target="_blank">📖 Chapter 4</a>
+            <a class="chapter-button" href="E:\study\phyics\leph105.pdf" target="_blank">📖 Chapter 5</a>
+            <a class="chapter-button" href="E:\study\phyics\leph106.pdf" target="_blank">📖 Chapter 6</a>
+            <a class="chapter-button" href="E:\study\phyics\leph107.pdf" target="_blank">📖 Chapter 7</a>
+            <a class="chapter-button" href="E:\study\phyics\leph108.pdf" target="_blank">📖 Chapter 8</a>
+            <a class="chapter-button" href="E:\study\phyics\leph109.pdf" target="_blank">📖 Chapter 9</a>
+            <a class="chapter-button" href="E:\study\phyics\leph1010.pdf" target="_blank">📖 Chapter 10</a>
+            <a class="chapter-button" href="E:\study\phyics\leph1011.pdf" target="_blank">📖 Chapter 11</a>
+            <a class="chapter-button" href="E:\study\phyics\leph1012.pdf" target="_blank">📖 Chapter 12</a>
+            <a class="chapter-button" href="E:\study\phyics\leph1013.pdf" target="_blank">📖 Chapter 13</a>
+            <a class="chapter-button" href="E:\study\phyics\leph1014.pdf" target="_blank">📖 Chapter 14</a>
+        </div>
     </main>
-
-    <footer class="grid">
+    <footer>
         <p style="text-align: center;">Yash Vinchhi</p>
         <div class="social" style="text-align: center;">
           <a href="https://www.instagram.com/yeaas_vinchhi/" target="_blank" style="text-decoration: none;">
@@ -47,5 +47,59 @@
     </a>
         </div>
     </footer>
+    <script>
+        // Dark mode toggle
+        const themeToggle = document.getElementById('themeToggle');
+        function setDarkMode(on) {
+            document.body.classList.toggle('dark-mode', on);
+            themeToggle.textContent = on ? '☀️' : '🌙';
+            localStorage.setItem('darkMode', on ? '1' : '0');
+        }
+        themeToggle.onclick = () => setDarkMode(!document.body.classList.contains('dark-mode'));
+        if (localStorage.getItem('darkMode') === '1') setDarkMode(true);
+        // Sidebar dark mode
+        function updateSidebarDark() {
+            document.getElementById('sidebar').classList.toggle('dark-mode', document.body.classList.contains('dark-mode'));
+        }
+        updateSidebarDark();
+        themeToggle.addEventListener('click', updateSidebarDark);
+    </script>
+    <style>
+        .centered-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 60vh;
+            text-align: center;
+            width: 100%;
+        }
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+        }
+        .chapter-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 32px;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+    margin: 0 auto 48px auto;
+    max-width: 1100px;
+}
+@media (max-width: 1100px) {
+    .chapter-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width: 700px) {
+    .chapter-grid {
+        grid-template-columns: 1fr;
+    }
+}
+    </style>
 </body>
 </html>
