--- a/subject.html
+++ b/subject.html
@@ -38,16 +38,22 @@
         document.getElementById('contentText').textContent = `${subject} Content Coming Soon!`;
         // Dark mode toggle
         const themeToggle = document.getElementById('themeToggle');
-        themeToggle.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-            themeToggle.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
-            localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
+        function setDarkMode(on) {
+            document.body.classList.toggle('dark-mode', on);
+            themeToggle.textContent = on ? '☀️' : '🌙';
+            localStorage.setItem('theme', on ? 'dark' : 'light');
             updateSidebarTheme();
-        });
-        if (localStorage.getItem('theme') === 'dark') {
-            document.body.classList.add('dark-mode');
-            themeToggle.textContent = '☀️';
         }
+        themeToggle.onclick = () => setDarkMode(!document.body.classList.contains('dark-mode'));
+        // On load, set theme from localStorage
+        if (localStorage.getItem('theme') === 'dark') setDarkMode(true);
+        else setDarkMode(false);
+        // Listen for theme changes from other tabs
+        window.addEventListener('storage', (e) => {
+            if (e.key === 'theme') {
+                setDarkMode(localStorage.getItem('theme') === 'dark');
+            }
+        });
         // Sidebar dark mode sync
         const sidebar = document.getElementById('sidebar');
         function updateSidebarTheme() {
@@ -58,7 +64,7 @@
             }
         }
         updateSidebarTheme();
-        document.getElementById('themeToggle').addEventListener('click', updateSidebarTheme);
+        themeToggle.addEventListener('click', updateSidebarTheme);
     </script>
 </body>
 </html>
